--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec npm test"
   },
-  "engines":{
+  "engines": {
     "node": "10.0.0"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "expect": "^22.4.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongodb": "^2.2.5",
     "mongoose": "^5.1.1",
     "npm": "^6.0.1"
