--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "todo-api",
+  "name": "node-todo-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec npm test"
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node": "10.0.0"
+    "node": "6.2.2"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "expect": "^22.4.3",
-    "express": "^4.16.3",
-    "lodash": "^4.17.10",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^5.1.1",
-    "npm": "^6.0.1"
+    "mongoose": "^4.5.9"
   },
   "devDependencies": {
-    "mocha": "^5.1.1",
-    "nodemon": "^1.17.4",
-    "supertest": "^3.1.0"
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   }
 }
